[project]
name = "diffusion-policies-for-offline-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "d4rl",
    "gym",
    "joblib",
    "matplotlib",
    "numpy",
    "python-dateutil",
    "seaborn",
    "cython==0.29.30",
    "numpy==1.22.4",
    "minari",
    "tensorboard",
    "huggingface_hub",
    "gymnasium",
]

[tool.uv.sources]
d4rl = { git = "https://github.com/rail-berkeley/d4rl" }
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu124", extra = "cu124" },
]

[project.optional-dependencies]
cpu = ["torch>=2.6.0"]
cu124 = ["torch>=2.6.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu124" }]]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
