[project]
name = "diffusion-policies-for-offline-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib",
    "matplotlib",
    "numpy",
    "python-dateutil",
    "seaborn",
    "numpy",
    "minari[all]",
    "tensorboard",
    "huggingface_hub",
    "gymnasium[all]",
    "types-python-dateutil",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
]

[project.optional-dependencies]
cpu = ["torch>=2.6.0"]
cu126 = ["torch>=2.6.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu126" }]]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
